Working rectangle drawing... but a sad discovery.