@@ -14,6 +14,10 @@ import org.example.pdftool.controller.PDFController;
 
 import java.awt.image.BufferedImage;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import javafx.geometry.Bounds;
 import javafx.geometry.Point2D;
@@ -33,6 +37,7 @@ public class PDFDocumentView extends Pane {
 
     private final Pane redactionLayer;
     private RedactionTool currentRedaction;
+    private Map<Integer, List<RedactionTool>> pageRedactions = new HashMap<>();
     private boolean redactionModeActive;
     private double AnchorX;
     private double AnchorY;
@@ -42,6 +47,7 @@ public class PDFDocumentView extends Pane {
         private double zoomIntensity = 0.02;
         private Node target;
         private Node zoomNode;
+        private boolean redactionModeActive;
 
         public ZoomableScrollPane(Node target) {
             super();
@@ -120,6 +126,12 @@ public class PDFDocumentView extends Pane {
             this.setHvalue((valX + adjustment.getX()) / (updatedInnerBounds.getWidth() - viewportBounds.getWidth()));
             this.setVvalue((valY + adjustment.getY()) / (updatedInnerBounds.getHeight() - viewportBounds.getHeight()));
         }
+
+        public void setRedactionModeActive(boolean active) {
+            this.redactionModeActive = active;
+            setPannable(!active);
+        }
+
     }
 
     public PDFDocumentView(PDFController pdfController, PageCounter pageCounter) {
@@ -188,25 +200,76 @@ public class PDFDocumentView extends Pane {
 
     public void displayCurrentPage() {
         renderPage();
+        updateRedactionDisplay();
+    }
+
+    private void updateRedactionDisplay() {
+        // Clear current redaction layer
+        redactionLayer.getChildren().clear();
+
+        // Add only the redactions for the current page
+        int currentPage = pdfController.getCurrentPage();
+        if (pageRedactions.containsKey(currentPage)) {
+            redactionLayer.getChildren().addAll(pageRedactions.get(currentPage));
+        }
     }
 
     public void setRedactionModeActive(boolean active) {
         this.redactionModeActive = active;
+        scrollPane.setRedactionModeActive(active);
     }
 
     public void clearAllRedactions() {
+        pageRedactions.clear();
         redactionLayer.getChildren().clear();
     }
 
     public void clearLastRedaction() {
-        if (!redactionLayer.getChildren().isEmpty()) {
-            redactionLayer.getChildren().removeLast();
+        int currentPage = pdfController.getCurrentPage();
+        List<RedactionTool> currentPageRedactions = pageRedactions.get(currentPage);
+
+        if (currentPageRedactions != null && !currentPageRedactions.isEmpty()) {
+            currentPageRedactions.remove(currentPageRedactions.size() - 1);
+            updateRedactionDisplay();
         }
     }
 
     private void handleMousePressed(MouseEvent event) {
         System.out.println("Mouse pressed, redactionModeActive: " + redactionModeActive);
         if (!redactionModeActive) return;
+
+        // Debug information
+//        Point2D pointInRedactionLayer = new Point2D(event.getX(), event.getY());
+//        Point2D pointInCentrePane = redactionLayer.localToParent(pointInRedactionLayer);
+
+//        try {
+//            PDPage page = pdfController.getDocument().getPage(pdfController.getCurrentPage());
+//            PDRectangle cropBox = page.getCropBox();
+//
+//            // Get bounds of actual image within ImageView
+//            Bounds imageBounds = pdfView.getLayoutBounds();
+//            // Get bounds of viewport
+//            Bounds viewportBounds = scrollPane.getViewportBounds();
+//            // Get our conversion
+//            Point2D pdfCoords = screenToPDFCoordinates(event.getX(), event.getY());
+
+//            System.out.println("\nDebug Coordinate Information:");
+//            System.out.println("Redaction Layer coords: " + new Point2D(event.getX(), event.getY()));
+//            System.out.println("Current zoom: " + scrollPane.scaleValue);
+//            System.out.println("PDF Page dimensions: " +
+//                    cropBox.getWidth() + " x " + cropBox.getHeight());
+//            System.out.println("Image Bounds: " +
+//                    imageBounds.getWidth() + " x " + imageBounds.getHeight());
+//            System.out.println("Viewport Bounds: " +
+//                    viewportBounds.getWidth() + " x " + viewportBounds.getHeight());
+//            System.out.println("Actual Image dimensions: " +
+//                    pdfView.getImage().getWidth() + " x " +
+//                    pdfView.getImage().getHeight());
+//          System.out.println("PDF Coordinates: " + pdfCoords);
+//           System.out.println("Within bounds: " + isWithinPDFBounds(pdfCoords));
+//        } catch (Exception e) {
+//            e.printStackTrace();
+//        }
 
         AnchorX = event.getX();
         AnchorY = event.getY();
@@ -227,7 +290,6 @@ public class PDFDocumentView extends Pane {
 
         double recX = Math.min(AnchorX, event.getX());
         double recY = Math.min(AnchorY, event.getY());
-
         double width = Math.abs(event.getX() - AnchorX);
         double height = Math.abs(event.getY() - AnchorY);
 
@@ -243,8 +305,89 @@ public class PDFDocumentView extends Pane {
         // If the rectangle is too small, remove it
         if (currentRedaction.getWidth() < 5 || currentRedaction.getHeight() < 5) {
             redactionLayer.getChildren().remove(currentRedaction);
+        } else {
+            // Calculate final coordinates
+            double recX = Math.min(AnchorX, event.getX());
+            double recY = Math.min(AnchorY, event.getY());
+            double width = Math.abs(event.getX() - AnchorX);
+            double height = Math.abs(event.getY() - AnchorY);
+
+            // Store PDF Coordinates for redaction
+            Point2D topLeft = screenToPDFCoordinates(recX, recY);
+            Point2D bottomRight = screenToPDFCoordinates(recX + width, recY + height);
+            currentRedaction.updatePDFCoordinates(topLeft, bottomRight);
+
+            // Debug prints
+            System.out.println("\nRedaction Created:");
+            System.out.println("Page: " + pdfController.getCurrentPage());
+            System.out.println("Screen coordinates: " +
+                    String.format("(%.2f, %.2f) to (%.2f, %.2f)",
+                            recX, recY, recX + width, recY + height));
+            System.out.println("PDF coordinates: " +
+                    String.format("(%.2f, %.2f) to (%.2f, %.2f)",
+                            topLeft.getX(), topLeft.getY(),
+                            bottomRight.getX(), bottomRight.getY()));
+
+            PDRectangle pdfRect = currentRedaction.getPDFRectangle();
+            System.out.println("PDF Rectangle: " +
+                    String.format("x=%.2f, y=%.2f, width=%.2f, height=%.2f",
+                            pdfRect.getLowerLeftX(), pdfRect.getLowerLeftY(),
+                            pdfRect.getWidth(), pdfRect.getHeight()));
+
+            // Store the redaction in our page map
+            int currentPage = pdfController.getCurrentPage();
+            pageRedactions.computeIfAbsent(currentPage, k -> new ArrayList<>()).add(currentRedaction);
         }
         currentRedaction = null;
+    }
+
+    private Point2D screenToPDFCoordinates(double screenX, double screenY) {
+        try {
+            PDPage page = pdfController.getDocument().getPage(pdfController.getCurrentPage());
+            PDRectangle cropBox = page.getCropBox();
+
+            // Get current scaling
+            double scale = pdfView.getImage().getWidth() / cropBox.getWidth();
+
+            // Get image scale factors
+            double imageWidth = pdfView.getImage().getWidth();
+            double imageHeight = pdfView.getImage().getHeight();
+
+            // Get bounds of the displayed image
+            Bounds imageBounds = pdfView.getLayoutBounds();
+
+            // Calculate scale between screen and pdf
+            double scaleX = cropBox.getWidth() / imageBounds.getWidth();
+            double scaleY = cropBox.getHeight() / imageBounds.getHeight();
+
+            // Convert screen coordinates to PDF coordinates
+            double pdfX = screenX * scaleX;
+            double pdfY = cropBox.getHeight() - (screenY * scaleY);
+
+            System.out.println("\nCoordinate Conversion Debug:");
+            System.out.println("Screen coords: " + screenX + ", " + screenY);
+            System.out.println("Scale factors: " + scaleX + ", " + scaleY);
+            System.out.println("Image bounds: " + imageBounds);
+            System.out.println("PDF scale: " + scale);
+
+            return new Point2D(pdfX, pdfY);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+
+    private boolean isWithinPDFBounds(Point2D pdfCoords) {
+        try {
+            PDPage page = pdfController.getDocument().getPage(pdfController.getCurrentPage());
+            PDRectangle cropBox = page.getCropBox();
+
+            return pdfCoords.getX() >= 0 && pdfCoords.getX() <= cropBox.getWidth() &&
+                    pdfCoords.getY() >= 0 && pdfCoords.getY() <= cropBox.getHeight();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return false;
+        }
     }
 
     @Override
